# cosim-ns3-omnet

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  launch-full-integration.sh  launch-realistic-cosim.sh  main.cpp  main_v2x_nfv.cpp  ndn-network.cc  test-v2x-nfv.sh  v2x-ndn-nfv-cosim
ns3-scripts/: cosim-script.cc  real-ndnsim-launcher.cc  simple-real-ndnsim-launcher.cc  simple-v2x-ndn.cc  v2x-ndn-nfv-cosim.cc
omnet_orchestrator/: Makefile  omnet_orchestrator
omnet_orchestrator/simulations/: Orchestrator.ned  OrchestratorNetwork.ned  omnetpp.ini  run
omnet_orchestrator/src/: Orchestrator.cc  Orchestrator.h
src/: main.cpp
src/adapters/: ns3_adapter.cpp  ns3_adapter.h  omnet_orchestrator.cpp  omnet_orchestrator.h
src/common/: config.cpp  config.h  leader_follower_synchronizer.cpp  leader_follower_synchronizer.h  message.cpp  message.h  mock_simulators.cpp  mock_simulators.h  synchronizer.cpp  synchronizer.h
